добавил пакет для создания файла .xlsx

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<button (click)="onGenerateXlsxButtonClickHandler(1000)">Generate</button>
 <button (click)="loadSubjects()">Load districts</button>
 <div *ngIf="subjects.length">
   <hr>
