добавил получение названия компании

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,6 +48,7 @@
   </select>
 </div>
 <hr>
+<h3>Название: <span>{{selectedCompanyInfo.title}}</span></h3>
 <h3>Руководитель: <span>{{selectedCompanyInfo['chief']}}</span></h3>
 <h3>Телефон: <span>{{selectedCompanyInfo['phone']}}</span></h3>
 <h3>E-mail: <span>{{selectedCompanyInfo['email']}}</span></h3>
